# helix-core/src/schemas/index.ts
@@ -1,1 +1,3 @@
 export * from './vp.js';
+export * from './vc.js';
+export * from './privilegeScopes.js';
